08_Multi-Container-App/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: web
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: client-cluster-ip-service
    protocol: TCP
    port: 3000 # outside
    targetPort: 3000 # container
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort:
