08_Multi-Container-App/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    # - your_domain_name
    # - www.your_domain_name
    - k8s-multi.com
    - www.k8s-multi.com
    secretName: k8s-multi-com # in certificate.yaml
  ingressClassName: nginx
  rules:
  - host: k8s-multi.com
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 3000
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000
  - host: www.k8s-multi.com
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 3000
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000
